--- a/root/code/templates/addsection.html
+++ b/root/code/templates/addsection.html
@@ -12,11 +12,11 @@
       <div id="form-body">
         <h2>Add Section</h2>
         <form action="" method="POST">
-          <div class="mb-3"></div>
+          <div class="mb-3">
             <label for="sectionName" class="form-label">Section Name<span style="color: red;">*</span>:</label>
             <input class="form-control" type="text" id="sectionName" name="sectionName" required maxlength="50">
           </div>
-          <div class="mb-3"></div>
+          <div class="mb-3">
             <label class="form-label" for="sectionImage" class="form-label">Section Image<span 
             style="color: red;">*</span>:</label>
             <input class="form-control" type="url" id="sectionImage" name="sectionImage" 
