--- a/root/code/templates/header-lib.html
+++ b/root/code/templates/header-lib.html
@@ -8,7 +8,7 @@
 			<span style="margin-left: 5px; "  class="fs-4">{{libinfo["Name"]}}</span>
 		</a>
 		<ul class="nav nav-pills">
-			<li class="nav-item"><a href="{{url_for('librarian_dashboard')}}" class="nav-link active" 
+			<li class="nav-item"><a href="{{url_for('librarian_dashboard')}}" class="nav-link" 
 				aria-current="page">Home</a></li>
 			<li class="nav-item"><a href="{{url_for('bookrequests')}}" class="nav-link">Book Requests</a></li>
 			<li class="nav-item"><a href="{{url_for('current_books')}}" class="nav-link">Current Books</a></li>
