--- a/root/code/templates/makerequest.html
+++ b/root/code/templates/makerequest.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	{% include 'header-user.html' %}
-	<div class="mainbody"></div>
+	<div class="mainbody">
 		<h1>Book Details</h1>
 		<table class="table">
 			<thead>
