--- a/root/code/templates/userdash.html
+++ b/root/code/templates/userdash.html
@@ -49,12 +49,11 @@
             </div>
         </form>
       </div>
-
-      <div style="margin: 50px;"></div> 
+      <div style="margin: 50px;">
       <div class = "tableheaders">
           <h3>List of Available books</h3>
       </div>
-      <div class="col-xs-8 col-xs-offset-2 well table"></div>
+      <div class="col-xs-8 col-xs-offset-2 well table">
           <table class="table table-scroll table-striped">
               <thead >
                 <tr ></tr>
@@ -87,6 +86,8 @@
               </tbody>
           </table>
       </div>
+    </div>
+  </div>
     {% include 'footer.html' %}
   </body>
 </html>
