--- a/root/code/templates/header-user.html
+++ b/root/code/templates/header-user.html
@@ -8,7 +8,7 @@
 			<span style="margin-left: 5px;" class="fs-4 d-flex align-items-center">{{userinfo["Name"]}}</span>
 		</a>
 		<ul class="nav nav-pills">
-			<li class="nav-item"><a href="{{url_for('user_dashboard')}}" class="nav-link active" 
+			<li class="nav-item"><a href="{{url_for('user_dashboard')}}" class="nav-link " 
 				aria-current="page">Home</a></li>
 			<li class="nav-item"><a href="{{url_for('user_books')}}" class="nav-link">My Books</a></li>
 			<li class="nav-item"><a href="{{url_for('user_stats')}}" class="nav-link">Stats</a></li>
