--- a/root/code/templates/userbooks.html
+++ b/root/code/templates/userbooks.html
@@ -51,11 +51,11 @@
                             <td>{{ book["author"] }}</td>
                             <td>{{ book["days remaining"] }}</td>
                             <td>
-                                <a href="{{ url_for('return_book', book_id=book['id'] , user_id=use
-                                rinfo['userid']) }}">Return</a>
+                                <a href="{{ url_for('return_book', book_id=book['id'] , 
+                                user_id=userinfo['userid']) }}">Return</a>
                                 <a href="{{ url_for('view_book', book_id=book['id']) }}">View</a>
-                                <a href="{{ url_for('download_book', book_id=book['id'], user_
-                                id=userinfo['userid']) }}">Download</a>
+                                <a href="{{ url_for('download_book', book_id=book['id'], 
+                                user_id=userinfo['userid']) }}">Download</a>
                             </td>
                         </tr>
                     {% endfor %}
@@ -71,7 +71,7 @@
     <div class = "tableheaders">
         <h3>List of completed books</h3>
     </div>
-        <div class="col-xs-8 col-xs-offset-2"></div>
+        <div class="col-xs-8 col-xs-offset-2">
             <table class="table table-scroll table-striped">
                 <thead>
                     <tr>
@@ -104,11 +104,12 @@
                     {% endif %}
                 </tbody>
             </table>
+        </div>
             <br>
         <div class = "tableheaders">
             <h3>List of Requested books</h3>
         </div>
-        <div class="col-xs-8 col-xs-offset-2 "></div>
+        <div class="col-xs-8 col-xs-offset-2 ">
             <table class="table table-scroll table-striped">
                 <thead>
                     <tr>
