--- a/root/code/templates/addbook.html
+++ b/root/code/templates/addbook.html
@@ -11,11 +11,10 @@
     <div class="mainbody">
       <div id="form-body">
         <h2>Add Book</h2>
-        <form action="" method="POST">
+        <form action="" method="POST" enctype="multipart/form-data">
           <div class="mb-3">
             <label for="bookTitle" class="form-label">Book Name<span style="color: red;">*</span>:</label>
-            <input class="form-control" type="text" id="bookTitle" name="bookTitle" \
-            required maxlength="100" placeholder="Book title">
+            <input class="form-control" type="text" id="bookTitle" name="bookTitle" required maxlength="100" placeholder="Book title" pattern="[A-Za-z0-9\s]+" title="Please enter only letters, numbers, and spaces">
             <input type="hidden" name="section_id" value="{{ section_id }}">
           </div>
           <div class="mb-3">
@@ -27,14 +26,15 @@
             <input class="form-control" type="url" id="bookImage" name="bookImage" required>
           </div>
           <div class="mb-3">
-            <label for="content" class="form-label">Book Link:</label>
-            <input class="form-control" type="url" id="link" name="link" required>
+            <label for="content" class="form-label">PDF file:</label>
+            <input class="form-control" type="file" id="pdfFile" name="pdfFile" accept=".pdf" required>
           </div>
           <div class="mb-3">
             <label for="content" class="form-label">Book Description:</label>
             <textarea class="form-control" id="Description" name="Description"></textarea>
           </div>
-          <button type="submit" class="btn btn-primary" style="margin-bottom: 5px;">Add Book</button>
+          <button type="submit" value="Upload" class="btn btn-primary" style="margin-bottom: 5px;">Add Book</button>
+          
         </form>
         <br>
         <a class="btn btn-secondary" href="{{url_for('librarian_dashboard')}}">Back to Dashboard</a>
